--- a/package.json
+++ b/package.json
@@ -9,13 +9,12 @@
     "date-fns": "^2.30.0",
     "framer-motion": "^10.15.0",
     "react": "^18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-loadingg": "^1.7.2",
-    "react-redux": "^8.1.2",
     "react-scripts": "5.0.1",
     "react-tooltip": "^5.19.0",
-    "redux": "^4.2.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
